--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=troca-livros
+
+spring.datasource.url = jdbc:mysql://localhost:3306/library
+spring.datasource.username=root
+spring.datasource.password=admin
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.jpa.show-sql=true
